# slap

./: README.md  Slap_Mblack.sh  Slap_Mred.sh
launch_slap/: CMakeLists.txt  package.xml
launch_slap/launch/: launch_slap_target.launch  launch_slap_tracker.launch
medusa_slap/: Slap.sh
medusa_slap/comms_slap/: CMakeLists.txt  package.xml  setup.py
medusa_slap/comms_slap/config/: config_comms_slap.yaml
medusa_slap/comms_slap/doc/: README.md
medusa_slap/comms_slap/launch/: comms_slap.launch
medusa_slap/comms_slap/scripts/: comms_slap_client_node  comms_slap_server_node
medusa_slap/comms_slap/src/comms_slap_ros/: CommsSlapClientNode.py  CommsSlapServerNode.py
medusa_slap/cooperative_control/: CMakeLists.txt  package.xml
medusa_slap/cooperative_control/config/: config_cooperative_control.yaml
medusa_slap/cooperative_control/doc/: README.md
medusa_slap/cooperative_control/include/cooperative_control_algorithms/: CooperativeControlAlgorithm.h
medusa_slap/cooperative_control/include/cooperative_control_ros/: CooperativeControlNode.h
medusa_slap/cooperative_control/launch/: cooperative_control.launch
medusa_slap/cooperative_control/src/cooperative_control_algorithms/: CooperativeControlAlgorithm.cpp
medusa_slap/cooperative_control/src/cooperative_control_ros/: CooperativeControlNode.cpp  CooperativeControlService.cpp
medusa_slap/dekf/: CMakeLists.txt  package.xml
medusa_slap/dekf/config/: config_dekf.yaml
medusa_slap/dekf/doc/: README.md
medusa_slap/dekf/include/dekf_algorithms/: DekfAlgorithm.h
medusa_slap/dekf/include/dekf_ros/: DekfNode.h
medusa_slap/dekf/launch/: dekf.launch
medusa_slap/dekf/src/dekf_algorithms/: DekfAlgorithm.cpp
medusa_slap/dekf/src/dekf_ros/: DekfNode.cpp  DekfService.cpp
medusa_slap/medusa_slap/: CMakeLists.txt  package.xml
medusa_slap/medusa_slap/doc/: README.md
medusa_slap/medusa_slap_msg/: CMakeLists.txt  package.xml
medusa_slap/medusa_slap_msg/doc/: README.md
medusa_slap/medusa_slap_msg/msg/: CPFinfo.msg  ETCInfo.msg  STCurve.msg  TargetPDF.msg  VehiclePosVel.msg
medusa_slap/medusa_slap_msg/srv/: DesiredGammaDot.srv  SetBehindTarget.srv  SetETCParameter.srv  SetFixedTargetMode.srv  SetFloat64.srv  SetMatricesQR.srv  SetRotateTarget.srv  SetRotateTargetMode.srv  SetTCGains.srv  SetTargetPDF.srv
medusa_slap/range_simulation/: CMakeLists.txt  package.xml
medusa_slap/range_simulation/config/: config_range_simulation.yaml
medusa_slap/range_simulation/doc/: README.md
medusa_slap/range_simulation/include/range_simulation_ros/: RangeSimulationNode.h
medusa_slap/range_simulation/launch/: range_simulation.launch
medusa_slap/range_simulation/src/range_simulation_ros/: RangeSimulationNode.cpp
medusa_slap/tracking_control/: CMakeLists.txt  package.xml
medusa_slap/tracking_control/config/: config_tracking_control.yaml
medusa_slap/tracking_control/doc/: README.md
medusa_slap/tracking_control/include/tracking_control_algorithms/: TrackingControlAlgorithm.h
medusa_slap/tracking_control/include/tracking_control_ros/: StateStructs.h  TrackingControlNode.h
medusa_slap/tracking_control/launch/: tracking_control.launch
medusa_slap/tracking_control/src/tracking_control_algorithms/: TrackingControlAlgorithm.cpp
medusa_slap/tracking_control/src/tracking_control_ros/: TrackingControlNode.cpp  TrackingService.cpp
medusa_slap/trajectory_planning/: CMakeLists.txt  package.xml
medusa_slap/trajectory_planning/config/: config_trajectory_planning.yaml
medusa_slap/trajectory_planning/doc/: README.md
medusa_slap/trajectory_planning/include/trajectory_planning_algorithms/: TrajectoryPlanningAlgorithm.h
medusa_slap/trajectory_planning/include/trajectory_planning_ros/: TrajectoryPlanningNode.h
medusa_slap/trajectory_planning/launch/: trajectory_planning.launch
medusa_slap/trajectory_planning/src/trajectory_planning_algorithms/: TrajectoryPlanningAlgorithm.cpp
medusa_slap/trajectory_planning/src/trajectory_planning_ros/: TrajectoryPlanningNode.cpp  TrajectoryPlanningService.cpp
