<?xml version="1.0"?>
<package format="2">
 <name>cooperative_control</name>
 <version>1.0.0</version>
 <description>
 TODO!
 </description>

 <license>GPLv3</license>

 <author email="dsor@gmail.com">DSOR GROUP</author>
 <maintainer email="dsor@gmail.com">genX</maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <depend>std_msgs</depend>

 <depend>roscpp</depend>

 <depend>farol_msgs</depend>
 
 <depend>farol_gimmicks_library</depend>

 <depend>medusa_slap_msg</depend>

</package>
