<?xml version="1.0"?>
<package format="2">
 <name>medusa_slap_msg</name>
 <version>1.0.0</version>
 <description>
 TODO!
 </description>

 <license>GPLv3</license>

 <author email="dsor@gmail.com">DSOR GROUP</author>
 <maintainer email="dsor@gmail.com">genX</maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <depend>std_msgs</depend>
 <depend>roscpp</depend>
 <depend>farol_msgs</depend>


 <!-- Libraries to generate the messages -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
